validate: 2026-02-09-remote-debugging-java-kubernetes